# kairotui

./: .env  Cargo.toml  kairotui.log.2025-07-01  kairotui.log.2025-07-02  kairotui.log.2025-07-04  kairotui.log.2025-07-05  temp.txt
src/: animation.rs  data.rs  log.rs  main.rs  tab.rs  tag.rs  theme.rs
