[package]
name = "kairotui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
color-eyre = "0.6.5"
dirs = "6.0.0"
ratatui = {version = "0.29.0", features = ["all-widgets"] }
regex = "1.11.1"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
serde_millis = "0.1.1"
tachyonfx = "0.15.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
indexmap = "2.10.0"
hex = "0.4.3"
phf = "0.12.1"
phf_macros = "0.12.1"
lazy_static = "1.5.0"
